<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.khatri.tasbeehcount.MainActivity"
    android:background="@android:color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/sound_off"
        android:textOn="@string/sound_on"
        android:id="@+id/toggle"
        android:checked="true" />

    <ToggleButton
        android:textOff="@string/vib_off"
        android:textOn="@string/vib_on"
        android:layout_toRightOf="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vibtoggle"
        android:checked="true" />

    <EditText
        android:layout_below="@+id/toggle"
        android:text="@string/zero"
        android:layout_centerHorizontal="true"
        android:id="@+id/setcount"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set"
        android:inputType="number"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_marginTop="10sp"
        android:layout_below="@+id/setcount"
        android:background="@drawable/bg"
        android:id="@+id/tv"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_marginTop="10sp"
        android:layout_below="@+id/tv"
        android:background="@drawable/bg"
        android:id="@+id/tv1"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <Button
        android:textColor="@android:color/white"
        android:layout_margin="5sp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv1"
        android:id="@+id/count"
        android:textSize="20sp"
        android:text="@string/count"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <Button
        android:layout_below="@+id/count"
        android:textColor="@android:color/white"
        android:layout_margin="5sp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:id="@+id/reset"
        android:textSize="20sp"
        android:text="@string/reset"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <Button
        android:layout_below="@id/reset"
        android:textColor="@android:color/white"
        android:layout_margin="5sp"
        android:background="@drawable/button"
        android:id="@+id/set"
        android:textSize="20sp"
        android:text="@string/set"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <Button
        android:layout_below="@id/set"
        android:textColor="@android:color/white"
        android:layout_margin="5sp"
        android:background="@drawable/button"
        android:id="@+id/exit"
        android:textSize="20sp"
        android:text="@string/exit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>